Fixed the z-index issue by refactoring the dropdown (do not use the Bootstrap Dropdown JS part). Added some keyboard navigation.

--- a/css/bootstrap-datepicker-select.css
+++ b/css/bootstrap-datepicker-select.css
@@ -1,6 +1,5 @@
 .datepicker-select {
 	position: relative;
-	z-index: 1;
 }
 
 .datepicker-select .dropdown-value {
@@ -16,16 +15,36 @@
 }
 
 .datepicker-select .dropdown-menu {
-	z-index: -1; /* For arrow to be above the menu. */
+	z-index: 4;
 }
 .datepicker-select .dropdown-menu.dropdown-long {
 	max-height: 300px;
 	overflow: hidden;
 	overflow-y: auto;
 }
-.datepicker-select .dropdown-menu > li.m-selected {
-	background: #efefef;
+
+.datepicker-select .dropdown-menu > li > a,
+.datepicker-select .dropdown-menu > li > a:hover {
+	color: #333333;
+	text-decoration: none;
+	background: transparent;
+	outline: 0;
 }
+.datepicker-select .dropdown-menu > li > a:focus,
+.datepicker-select .dropdown-menu > li > a.focus {
+	color: #ffffff;
+	text-decoration: none;
+	background-color: #0081c2;
+	background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+	background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+	background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+	background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+	background-repeat: repeat-x;
+	outline: 0;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+}
+
 .datepicker-select .dropdown-menu::-webkit-scrollbar {
 	width: 12px;
 }
@@ -49,10 +68,17 @@
 	background: #7d7d7d;
 }
 
-.datepicker-select .btn-group.open .dropdown-toggle:before {
+.datepicker-select .dropdown-arrow {
 	position: absolute;
-	bottom: -4px;
+	bottom: -3px;
 	right: 7px;
+	z-index: 5;
+	display: none;
+}
+.datepicker-select .dropdown-arrow:before {
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
 	display: inline-block;
 	border-right: 7px solid transparent;
 	border-bottom: 7px solid #ccc;
@@ -60,13 +86,20 @@
 	border-bottom-color: rgba(0, 0, 0, 0.2);
 	content: '';
 }
-.datepicker-select .btn-group.open .dropdown-toggle:after {
+.datepicker-select .dropdown-arrow:after {
 	position: absolute;
-	bottom: -4px;
-	right: 8px;
+	bottom: 0px;
+	right: 1px;
 	display: inline-block;
 	border-right: 6px solid transparent;
 	border-bottom: 6px solid #ffffff;
 	border-left: 6px solid transparent;
 	content: '';
+}
+
+.datepicker-select .open > .dropdown-menu {
+	display: block;
+}
+.datepicker-select .open > .dropdown-arrow {
+	display: block;
 }
